fix duplicate ids in login form and move login/register buttons into the hamburger menu on small screens

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -1728,7 +1728,7 @@ dl.bb-dl > dd > li {
 	text-align: center;
 }
 
-#login-main, .rmagic-button {
+.login-wrapper {
 	max-width: 400px;
 	margin-top: 20px;
 	margin-left: auto;
